--- a/templates/webpages/about.html
+++ b/templates/webpages/about.html
@@ -13,9 +13,9 @@
             <div class="timeline-panel">
                 <div class="timeline-heading">
                     <a href="https://www.freepik.com/vectors/business">Business vector created by macrovector - www.freepik.com</a>
-                    <h4 class="subheading">Traveling around the world!</h4>
+                    <h4 class="subheading">This page sucks, but don't worry, we will fix it for your kidney</h4>
                 </div>
-                <div class="timeline-body"><p class="text-muted">Let us build a memory that you will always remember.</p></div>
+                <div class="timeline-body"><p class="text-muted">Here are more words</p></div>
             </div>
         </li>                    
     </ul>
