--- a/templates/webpages/index.html
+++ b/templates/webpages/index.html
@@ -2,11 +2,17 @@
 {%load static%}
 {%block content%}
 <!-- Masthead-->
+
 <header class="masthead">
     <div class="container">
-        <div class="masthead-subheading">Welcome to TripMe Travel!</div>
-        <div class="masthead-heading text-uppercase">We make the world a little smaller</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{% url 'about' %}">Tell Me More</a>
+        <div class="masthead-subheading">Welcome to Kidney Health!</div>
+        <div class="masthead-heading text-uppercase">We Care About Your Kidneys :)</div>
+        <div> <img class="img-fluid rounded-circle mb-4" src="{% static 'img/kidney.jpg' %}" alt="..." /</div>
+        <div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{% url 'about' %}">Learn More!</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{% url 'login' %}">Log in</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{% url 'boot' %}">bootstrap page</a>
+        </div>
     </div>
 </header>
 {% endblock%}
