--- a/templates/webpages/login.html
+++ b/templates/webpages/login.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="masthead-subheading">Log in to your Kidney Health Account</div>
         <div class="masthead-heading text-uppercase">See how your kidneys are doing</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{% url 'login' %}">Log in</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{% url 'createAcc' %}">Create Account</a>
     </div>
 </header>
 {% endblock%}
