--- a/templates/webpages/createAccount.html
+++ b/templates/webpages/createAccount.html
@@ -6,12 +6,12 @@
     <div class="container">
         <div class="masthead-subheading">Log in to your Kidney Health Account</div>
         <div class="masthead-heading text-uppercase">See how your kidneys are doing</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{% url 'login' %}">Log in</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{% url 'login' %}">Log in instead?</a>
     </div>
 
     <div class = "col-md-4">
         <div class = "border p-3 shadow">
-            <h4>Add Data</h4>
+            <h4>Add Info</h4>
             <hr>
             <form method="POST">
                 {% csrf_token %}
